@@ -32,6 +32,7 @@
 
         <jstl.version>1.2</jstl.version>
         <servlet.api.version>4.0.0</servlet.api.version>
+        <annotation.api.version>1.3.2</annotation.api.version>
         <validation.api.version>3.0.0</validation.api.version>
         <glassfish.jakarta.el.version>4.0.2</glassfish.jakarta.el.version>
         <hibernate.validator.version>7.0.0.Final</hibernate.validator.version>
@@ -51,12 +52,13 @@
         <slf4j.log4j12.version>1.7.12</slf4j.log4j12.version>
 
         <junit.version>4.12</junit.version>
-        <lombok.version>1.18.8</lombok.version>
+        <lombok.version>1.18.22</lombok.version>
 
-        <compiler.plugin.version>3.8.0</compiler.plugin.version>
-        <source.plugin.version>3.1.0</source.plugin.version>
-        <jar.plugin.version>3.1.1</jar.plugin.version>
-        <dependency.plugin.version>3.1.1</dependency.plugin.version>
+        <source.plugin.version>3.2.1</source.plugin.version>
+        <compiler.plugin.version>3.10.1</compiler.plugin.version>
+        <jar.plugin.version>3.2.2</jar.plugin.version>
+        <dependency.plugin.version>3.3.0</dependency.plugin.version>
+        <surefire.plugin.version>3.0.0-M7</surefire.plugin.version>
 
         <maven.source.version>8</maven.source.version>
         <maven.target.version>8</maven.target.version>
@@ -135,6 +137,17 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -191,6 +204,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-compress</artifactId>
                 <version>${commons.compress.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${annotation.api.version}</version>
             </dependency>
 
             <dependency>
